--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "async": "^1.5.2",
-    "body-parser": "^1.14.2",
+    "body-parser": "^1.15.1",
     "express": "^4.13.4",
+    "geodesy": "^1.1.0",
     "lodash": "^4.0.0",
     "mongodb": "^2.1.4",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "request": "^2.72.0"
   }
 }
